✨ New API /oauth/{provider}/config and /oauth/{provider}/token
